schema/testdata/errors/operation_set_expression_unresolvable_rhs.keel
model Profile {
    fields {
        username Text @unique
    }

    actions {
        create createProfile() {
            //expect-error:37:49:AttributeExpressionError:expression expected to resolve to type Text but it is Identity
            @set(profile.username = ctx.identity)
        }
    }
}
